--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.1.0",
     "@prisma/client": "^5.7.1",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^4.36.1",
@@ -26,9 +27,12 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-loading-skeleton": "^3.3.1",
+    "react-pdf": "^7.6.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.1.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
